feat(login): add login and register method but will be used later
