# internal/models/account.go
@@ -1,0 +1,11 @@
+package models
+
+import (
+	"gorm.io/gorm"
+)
+
+type Account struct {
+	gorm.Model
+	Email    string `gorm:"unique"`
+	Password string
+}
